--- a/features/core/pom.xml
+++ b/features/core/pom.xml
@@ -34,7 +34,7 @@
 		<dependency>
 			<groupId>com.intel.mtwilson.services</groupId>
 			<artifactId>mtwilson-attestation-client-jaxrs2</artifactId>
-			<version>3.1-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.intel.mtwilson.integration</groupId>
@@ -43,7 +43,13 @@
 		<dependency>
 			<groupId>com.intel.mtwilson.util</groupId>
 			<artifactId>mtwilson-util-configuration</artifactId>
-			<version>3.1-SNAPSHOT</version>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.intel.mtwilson.integration</groupId>
+			<artifactId>mtwilson-client-java7</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 
 		<!-- Other -->
@@ -64,7 +70,6 @@
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
-			<version>2.8.1</version>
 		</dependency>
 
 	</dependencies>
