--- a/features/webservice/pom.xml
+++ b/features/webservice/pom.xml
@@ -246,6 +246,10 @@
 			<artifactId>ini4j</artifactId>
 			<version>0.5.4</version>
 		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+		</dependency>
 
 	</dependencies>
 
