--- a/features/plugins/pom.xml
+++ b/features/plugins/pom.xml
@@ -22,6 +22,11 @@
 		</dependency>
 		<dependency>
 			<groupId>com.intel.mtwilson.attestation-hub</groupId>
+			<artifactId>attestation-hub-common</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.intel.mtwilson.attestation-hub</groupId>
 			<artifactId>attestation-hub-ws</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -56,14 +61,10 @@
 			<version>20140107</version>
 		</dependency>
 		<dependency>
-			<groupId>org.quartz-scheduler</groupId>
-			<artifactId>quartz</artifactId>
-			<version>2.2.3</version>
+			<groupId>org.bitbucket.b_c</groupId>
+			<artifactId>jose4j</artifactId>
+			<version>0.5.1</version>
 		</dependency>
-		<dependency>
-			<groupId>org.quartz-scheduler</groupId>
-			<artifactId>quartz-jobs</artifactId>
-			<version>2.2.3</version>
-		</dependency>
+
 	</dependencies>
 </project>
