Add implementation for connecting to nova extension API_ENDPOINT Update plugin manager to add asset tags
Change-Id: I8b27ac471876b997c5ff3d115288df04b2ecc8e6

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -19,7 +19,11 @@
 		<module>persistence</module>
 		<module>webservice</module>
 		<module>core</module>
+		<module>plugins-api</module>
 		<module>plugins</module>
+		<module>plugin-nova</module>
+		<module>plugin-mesos</module>
+		<module>plugin-kubernetes</module>
 	</modules>
 
 </project>
