--- a/common/pom.xml
+++ b/common/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.intel.mtwilson.attestation-hub</groupId>
 		<artifactId>attestation-hub-maven-java</artifactId>
-		<version>3.2-SNAPSHOT</version>
+		<version>3.2.1-SNAPSHOT</version>
 		<relativePath />
 	</parent>
 
@@ -22,22 +22,20 @@
 		<dependency>
 			<groupId>com.intel.mtwilson.util</groupId>
 			<artifactId>mtwilson-util-io</artifactId>
+			<version>${project.version}</version>
 			<type>jar</type>
-			<version>3.2-SNAPSHOT</version>
 
 		</dependency>
 
 		<dependency>
 			<groupId>com.intel.mtwilson.integration</groupId>
 			<artifactId>mtwilson-configuration</artifactId>
-			<version>3.2-SNAPSHOT</version>
 
 		</dependency>
 		<dependency>
 			<groupId>com.intel.mtwilson.util</groupId>
 			<artifactId>mtwilson-util-configuration</artifactId>
-			<version>3.2-SNAPSHOT</version>
-
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 </project>
