--- a/features/api/pom.xml
+++ b/features/api/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>com.intel.mtwilson.maven</groupId>
 		<artifactId>mtwilson-core-feature-zip</artifactId>
-		<version>3.2-SNAPSHOT</version>
+		<version>3.2.1-SNAPSHOT</version>
 		<relativePath />
 	</parent>
 
@@ -44,7 +44,7 @@
 		<dependency>
 			<groupId>com.intel.mtwilson.services</groupId>
 			<artifactId>mtwilson-attestation-client-jaxrs2</artifactId>
-			<version>3.2-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 		<!-- external -->
 		<dependency>
